python/test-data/testTypesProtos1.err
Traceback (most recent call last):
  File "test-data/testTypesProtos1.py", line 21, in <module>
    doSomething(Dog())
  File "test-data/testTypesProtos1.py", line 19, in doSomething
    print(a.makeSound(3.14))
WyppTypeError: Dog does not implement protocol Animal
given:    <Dog object>
expected: value of type Animal

context: doSomething(a: Animal) -> None
                        ^^^^^^
declared at: test-data/testTypesProtos1.py:18
caused by: test-data/testTypesProtos1.py:21
  | doSomething(Dog())

Argument loadness of method makeSound violates the type declared by the protocol Animal.
Annotation int is incompatible with the protocol's annotation float.

given:    3.14
expected: value of type int

context: makeSound(self: Self, loadness: int) -> str
                                         ^^^
declared at: test-data/testTypesProtos1.py:13
declared at: test-data/testTypesProtos1.py:8
caused by: test-data/testTypesProtos1.py:13
  |     def makeSound(self, loadness: int) -> str:
